--- a/website/themes/uppy/layout/example.ejs
+++ b/website/themes/uppy/layout/example.ejs
@@ -27,17 +27,17 @@
 
   <textarea id="console-log" class="Console"></textarea>
   <script>
-  // console.log = (function (old_function, div_log) {
-  //   return function (text) {
-  //     old_function(text);
+  console.log = (function (old_function, div_log) {
+    return function (text) {
+      old_function(text);
 
-  //     if (text !== (text + '')) {
-  //       text = JSON.stringify(text);
-  //     }
+      if (text !== (text + '')) {
+        text = JSON.stringify(text);
+      }
 
-  //     div_log.value = text + "\n" + div_log.value;
-  //   };
-  // } (console.log.bind(console), document.getElementById("console-log")));
+      div_log.value = text + "\n" + div_log.value;
+    };
+  } (console.log.bind(console), document.getElementById("console-log")));
   </script>
 
   <script>
